css/style.css
/* ... */
  
     /* ==========================================================================
        Media Query for Tablet
       ========================================================================== */
     @media screen and (min-width: 40em) {
   /*==================================
      Body Styles - Alyssa
    ==================================*/
      .page__intro {
        margin: 5% 2%;
      }
    /*====Services section====*/
    .services__content {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      margin-bottom: 5%;
    }
    .news-item {
      width: 292px;
      height: 256px;
    }
    .news-priority {
      flex-grow: 2;
      grid-column: span 2;
      width: 600px;
      height: 360px;
    }
    article .news__picture {
      width: 600px;
      height: 360px;
    }
    .news__info {
    max-width: 598px;
    }
    .news-item .news__info {
      height: 20%;
    }
    .service__desc {
      margin: auto 5%;
    }
  
  /*====News section====*/
  .news__content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
    align-items: center;
    gap: 10px;
    margin: 0 auto;
    max-width: 600px;
  }
    .news-item {
      width: 292px;
      height: 256px;
    }
    .news-priority {
      flex-grow: 2;
      grid-column: span 2;
      width: 600px;
      height: 360px;
    }
    article .news__picture {
      width: 600px;
      height: 360px;
    }
    .news__info {
    max-width: 598px;
    }
    .news-item .news__info {
      height: 20%;
    }
  
    /*====Gallery section====*/
    .gallery__content {
      display: grid;
      grid-template-columns: repeat(2, minmax(300px, 1fr));
      margin: 0 auto;
      max-width: 600px;
    }
    .gallery__image{
      width: 292px;
      height: 256px;
    }
  
    /*====Clients section====*/
    .page-clients {
      margin-top: 3rem;
      margin-bottom: 65px; 
    }
    .clients__content{
      display: grid;
      grid-template-columns: repeat(3, minmax(200px, 1fr));
      max-width: 600px;
      margin: 0 auto;
    }
    .logo__image {
      width: 190px;
      height: 128px;
    }
  
  }
/* ... */

